Refactor builtIn lookup